[*] New RBAC model
